src/snapshots/braille__opt__tests__graph_style__graph_style_two_line.snap
---
source: src/opt.rs
expression: stdout
---
⠀⠀⡐⠉⠄⠀⠀⠀⠀⠀⠀⠠⠉⠑⣀⠊⠡⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠠⠀⠀⠈⠀⠀⠀⠀⠀⠠⠁⠀⠀⡠⠀⠀⢁⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠄⠀⠀⠀⠁⠀⠀⠀⠀⠂⠀⠀⢀⠀⠂⠀⠀⡀⠀⠀⠀⠀⠀⠀⠀
⢂⠀⠀⠀⠀⠈⠀⠀⠀⠐⠀⠀⠀⡀⠀⠈⠀⠀⠀⠀⠀⠀⠀⠀⠀⠄
⡐⠀⠀⠀⠀⠀⠂⠀⠀⠂⠀⠀⠀⠀⠀⠀⠁⠀⠈⠀⠀⠀⠀⠀⠠⠀
⠀⠂⠀⠀⠀⠀⠠⠀⠐⠀⠀⠀⠈⠀⠀⠀⠈⡀⠀⠂⠀⠀⠀⠀⠄⠂
⠀⠐⠀⠀⠀⠀⠀⠄⠁⠀⠀⠀⠂⠀⠀⠀⠀⢀⠀⠠⠀⠀⠀⠠⠠⠀
⠀⠀⠂⠀⠀⠀⠀⣈⠀⠀⠀⠐⠀⠀⠀⠀⠀⠀⡀⠀⠄⠀⠀⠄⠄⠀
⠀⠀⠈⡀⠀⠀⠠⠀⠄⠀⠀⠂⠀⠀⠀⠀⠀⠀⠠⠀⠠⠀⡐⠠⠀⠀
⠀⠀⠀⠐⢄⡠⠁⠀⠐⣀⠌⠀⠀⠀⠀⠀⠀⠀⠀⠡⣀⠶⡠⠂⠀⠀

